[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ScoreEnd.gd" type="Script" id=1]
[ext_resource path="res://Assets/Silver.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="Popup" type="Popup"]
margin_right = 900.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.807843, 0.768627, 0.768627, 1 )

[node name="FinalScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -235.0
margin_top = 120.0
margin_right = -195.0
margin_bottom = 253.0
custom_colors/font_color = Color( 0.992157, 0.254902, 0.254902, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -266.0
margin_right = 76.0
margin_bottom = -78.0

[node name="MainMenu" type="Button" parent="Buttons"]
margin_right = 152.0
margin_bottom = 60.0
focus_neighbour_top = NodePath("../Quit")
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="PlayAgain" type="Button" parent="Buttons"]
margin_top = 64.0
margin_right = 152.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
text = "Play Again"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 128.0
margin_right = 152.0
margin_bottom = 188.0
focus_neighbour_bottom = NodePath("../MainMenu")
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Buttons/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
